--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
     "dev": "webpack-dev-server",
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
     "lint": "eslint \"**/*.{js,jsx}\" --quiet",
+    "test": "jest --coverage",
+    "test:coverage": "jest",
+    "test:update": "jest -u",
     "watch": "webpack --watch"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "jest-serializer-enzyme"
+    ]
   },
   "dependencies": {
     "axios": "0.16.1",
@@ -58,6 +66,7 @@
     "eslint-plugin-react": "7.0.1",
     "flow-bin": "0.47.0",
     "jest": "20.0.4",
+    "jest-cli": "^23.6.0",
     "jest-serializer-enzyme": "1.0.0",
     "moxios": "0.4.0",
     "nodemon": "1.11.0",
