--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-prettier": "2.1.1",
     "eslint-plugin-react": "7.0.1",
-    "flow-bin": "0.47.0",
+    "flow-bin": "^0.81.0",
+    "flow-typed": "^2.5.1",
     "jest": "20.0.4",
     "jest-cli": "^23.6.0",
     "jest-serializer-enzyme": "1.0.0",
